[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/autoloads/Pause.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/etc/Black.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/new_dynamicfont.tres" type="DynamicFont" id=3]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BackGround" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.478431 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.5
margin_top = -75.0
margin_right = 34.5
margin_bottom = -53.0
custom_fonts/font = ExtResource( 3 )
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.7649
margin_top = -0.994568
margin_right = 27.2351
margin_bottom = 21.0054
custom_fonts/font = ExtResource( 3 )
text = "Screen"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0835
margin_top = 24.6532
margin_right = 15.9165
margin_bottom = 46.6532
custom_fonts/font = ExtResource( 3 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
margin_left = 217.19
margin_top = 84.757
margin_right = 258.19
margin_bottom = 106.757
custom_fonts/font = ExtResource( 3 )
text = "Save"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="."]
margin_left = 217.719
margin_top = 109.919
margin_right = 257.719
margin_bottom = 131.919
custom_fonts/font = ExtResource( 3 )
text = "Load"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Screen" to="." method="_on_Screen_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
